--- a/packages/components/s-specs-editor-component/src/css/s-specs-editor-component.css
+++ b/packages/components/s-specs-editor-component/src/css/s-specs-editor-component.css
@@ -12,25 +12,63 @@
         /* min-width: 250px; */
     }
 
-    .s-specs-editor_actions {
-        padding: sugar.padding(10);
-    }
+    /**
+     * Metas
+     */
+    .s-specs-editor_metas {
+        display: flex;
+        align-items: center;
+        padding-inline-start: sugar.padding(40);
+        padding-inline-end: sugar.padding(10);
 
-    .s-specs-editor_action {
-        display: block;
-        aspect-ratio: 1;
-        width: 2em;
-        text-align: center;
-        background: sugar.color(current, --alpha 0);
-        @sugar.transition (fast);
-        @sugar.border.radius();
-
-        &:hover {
-            background: sugar.color(current, --darken 10%);
+        ._title {
+            flex-grow: 1;
         }
 
-        i {
-            opacity: 1;
+        ._actions {
+            display: flex;
+            /* gap: sugar.margin(10); */
+
+            ._action {
+            }
+            ._action-save {
+                @sugar.ui.button();
+                @sugar.color (accent);
+            }
+            ._action-delete {
+                @sugar.ui.button ($lnf: text);
+                /* @sugar.color (error); */
+            }
+        }
+    }
+
+    .s-specs-editor_actions {
+        padding: sugar.padding(10);
+
+        ._action {
+            display: block;
+            aspect-ratio: 1;
+            width: 2em;
+            text-align: center;
+            background: sugar.color(current, --alpha 0);
+            @sugar.transition (fast);
+            @sugar.border.radius();
+
+            &:hover {
+                background: sugar.color(current, --darken 10%);
+            }
+
+            i {
+                opacity: 1;
+            }
+        }
+    }
+
+    .s-specs-editor_prop:has(> div) {
+        padding-block: sugar.padding(20);
+
+        &.s-specs-editor_prop-checkbox {
+            border-bottom: 1px solid sugar.color(main, surface, --darken 5%);
         }
     }
 
@@ -133,6 +171,76 @@
         }
         &.current i {
             opacity: 1;
+        }
+    }
+
+    .s-specs-editor_prop:not(.s-specs-editor_child .s-specs-editor_prop) {
+        /* padding-inline: sugar.padding(40); */
+    }
+
+    .s-specs-editor_prop {
+        padding-inline: sugar.padding(40);
+    }
+    .s-specs-editor_child-title {
+        padding-block-start: sugar.padding(30);
+        padding-inline: sugar.padding(40);
+        color: sugar.color(accent);
+    }
+    .s-specs-editor_child-description {
+        padding-block-end: sugar.padding(30);
+        padding-inline: sugar.padding(40);
+    }
+
+    .s-specs-editor_label {
+        margin-block-end: sugar.margin(20);
+
+        i {
+            opacity: 0.4;
+            @sugar.transition (fast);
+
+            &:hover {
+                opacity: 0.8;
+            }
+        }
+    }
+
+    .s-specs-editor_metas {
+        position: sticky;
+        z-index: 10;
+        top: 0;
+        left: 0;
+        width: 100%;
+        padding-block: sugar.padding(30);
+        margin-block-end: sugar.margin(30);
+        background-image: linear-gradient(
+            45deg,
+            sugar.color(main, background),
+            sugar.color(main, background, --lighten 5%)
+        );
+        @sugar.transition;
+        @sugar.depth (50);
+
+        &-title {
+            color: sugar.color(accent);
+            padding-inline: sugar.padding(30);
+        }
+
+        * {
+            @sugar.transition;
+            overflow: hidden;
+            opacity: 1;
+        }
+    }
+
+    .s-specs-editor_child {
+        /* padding: sugar.padding(40); */
+        /* background: sugar.color(main, background, --darken 5% --alpha 0.3); */
+
+        &:not(:first-child) {
+            margin-block-start: sugar.margin(40);
+        }
+        &:not(:last-child) {
+            margin-block-end: sugar.margin(40);
         }
     }
 }
