--- a/packages/app/s-carpenter/src/css/s-carpenter-component.css
+++ b/packages/app/s-carpenter/src/css/s-carpenter-component.css
@@ -52,6 +52,17 @@
     }
 }
 
+@keyframes s-carpenter-open-btn-in {
+    from {
+        opacity: 0;
+        transform: translateX(calc(100% + 30px));
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
 .s-carpenter_open-btn {
     @sugar.ui.button();
     @sugar.color (complementary);
@@ -59,6 +70,7 @@
     z-index: 99999;
     top: 30px;
     right: 30px;
+    /* animation: s-carpenter-open-btn-in 0.3s ease-out forwards; */
 
     svg {
         width: 1em;
@@ -153,6 +165,8 @@
     } */
 }
 .s-carpenter_ready {
+    animation: none;
+
     ._logo {
         left: 10px;
 
