--- a/packages/app/s-carpenter/src/css/components/loading.css
+++ b/packages/app/s-carpenter/src/css/components/loading.css
@@ -7,6 +7,21 @@
     }
 }
 
+@keyframes s-carpenter-loading-bkg {
+    0% {
+        @sugar.color (complementary);
+        /* background: sugar.color(complementary); */
+    }
+    50% {
+        @sugar.color (accent);
+        /* background: sugar.color(accent); */
+    }
+    100% {
+        @sugar.color (complementary);
+        /* background: sugar.color(complementary); */
+    }
+}
+
 .s-carpenter-app_loading {
     position: absolute;
     top: 45%;
@@ -19,7 +34,6 @@
         cubic-bezier(0.56, -0.005, 0.46, 1.505) forwards;
     @sugar.transition;
     @sugar.depth (100);
-    @sugar.color (complementary);
 
     width: 1em;
     height: 1em;
@@ -27,12 +41,13 @@
 
     ._loader {
         position: absolute;
+        opacity: 0.5;
         top: 50%;
         left: 50%;
-        transform: translate(-40%, -55%);
-    }
-
-    svg {
-        font-size: 60px;
+        transform: translate(-50%, -50%);
+        @sugar.color (#fff);
+        font-size: 40px;
+        animation: s-carpenter-loading-bkg 0.5s
+            cubic-bezier(0.56, -0.005, 0.46, 1.505) infinite;
     }
 }
