--- a/packages/app/s-carpenter/src/css/generic/carpenter-loader.css
+++ b/packages/app/s-carpenter/src/css/generic/carpenter-loader.css
@@ -10,6 +10,169 @@
     }
 }
 
+@keyframes s-carpenter-loader-blocks-1 {
+    0% {
+        top: 0;
+        left: calc(50% + var(--s-carpenter-loader-blocks-gap) * 0.5);
+        right: 0;
+        bottom: 0;
+    }
+    12.5% {
+        top: 0;
+        left: calc(50% + var(--s-carpenter-loader-blocks-gap) * 0.5);
+        right: 0;
+        bottom: calc(50% + var(--s-carpenter-loader-blocks-gap) * 0.5);
+    }
+    25% {
+    }
+    37.5% {
+    }
+    50% {
+    }
+    62.5% {
+        top: 0;
+        left: calc(50% + var(--s-carpenter-loader-blocks-gap) * 0.5);
+        right: 0;
+        bottom: calc(50% + var(--s-carpenter-loader-blocks-gap) * 0.5);
+    }
+    75% {
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: calc(50% + var(--s-carpenter-loader-blocks-gap) * 0.5);
+    }
+    87.5% {
+        top: 0;
+        left: 0;
+        right: calc(50% + var(--s-carpenter-loader-blocks-gap) * 0.5);
+        bottom: calc(50% + var(--s-carpenter-loader-blocks-gap) * 0.5);
+    }
+    100% {
+        top: 0;
+        left: 0;
+        right: calc(50% + var(--s-carpenter-loader-blocks-gap) * 0.5);
+        bottom: calc(50% + var(--s-carpenter-loader-blocks-gap) * 0.5);
+    }
+}
+@keyframes s-carpenter-loader-blocks-2 {
+    0% {
+        top: calc(50% + var(--s-carpenter-loader-blocks-gap) * 0.5);
+        left: 0;
+        right: calc(50% + var(--s-carpenter-loader-blocks-gap) * 0.5);
+        bottom: 0;
+    }
+    12.5% {
+        top: calc(50% + var(--s-carpenter-loader-blocks-gap) * 0.5);
+        left: 0;
+        right: calc(50% + var(--s-carpenter-loader-blocks-gap) * 0.5);
+        bottom: 0;
+    }
+    25% {
+        top: calc(50% + var(--s-carpenter-loader-blocks-gap) * 0.5);
+        left: 0;
+        right: 0;
+        bottom: 0;
+    }
+    37.5% {
+        top: calc(50% + var(--s-carpenter-loader-blocks-gap) * 0.5);
+        left: calc(50% + var(--s-carpenter-loader-blocks-gap) * 0.5);
+        right: 0;
+        bottom: 0;
+    }
+    50% {
+    }
+    62.5% {
+        top: calc(50% + var(--s-carpenter-loader-blocks-gap) * 0.5);
+        left: calc(50% + var(--s-carpenter-loader-blocks-gap) * 0.5);
+        right: 0;
+        bottom: 0;
+    }
+    75% {
+    }
+    87.5% {
+        top: calc(50% + var(--s-carpenter-loader-blocks-gap) * 0.5);
+        left: calc(50% + var(--s-carpenter-loader-blocks-gap) * 0.5);
+        right: 0;
+        bottom: 0;
+    }
+    100% {
+        top: 0;
+        left: calc(50% + var(--s-carpenter-loader-blocks-gap) * 0.5);
+        right: 0;
+        bottom: 0;
+    }
+}
+@keyframes s-carpenter-loader-blocks-3 {
+    0% {
+        top: 0;
+        left: 0;
+        right: calc(50% + var(--s-carpenter-loader-blocks-gap) * 0.5);
+        bottom: calc(50% + var(--s-carpenter-loader-blocks-gap) * 0.5);
+    }
+    12.5% {
+    }
+    25% {
+    }
+    37.5% {
+        top: 0;
+        left: 0;
+        right: calc(50% + var(--s-carpenter-loader-blocks-gap) * 0.5);
+        bottom: calc(50% + var(--s-carpenter-loader-blocks-gap) * 0.5);
+    }
+    50% {
+        top: 0;
+        left: 0;
+        right: calc(50% + var(--s-carpenter-loader-blocks-gap) * 0.5);
+        bottom: 0;
+    }
+    62.5% {
+        top: calc(50% + var(--s-carpenter-loader-blocks-gap) * 0.5);
+        left: 0;
+        right: calc(50% + var(--s-carpenter-loader-blocks-gap) * 0.5);
+        bottom: 0;
+    }
+    75% {
+    }
+    87.5% {
+    }
+    100% {
+        top: calc(50% + var(--s-carpenter-loader-blocks-gap) * 0.5);
+        left: 0;
+        right: calc(50% + var(--s-carpenter-loader-blocks-gap) * 0.5);
+        bottom: 0;
+    }
+}
+
+.carpenter-loader-blocks {
+    --s-carpenter-loader-blocks-gap: 0.1em;
+
+    @sugar.color (accent);
+    position: relative;
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+
+    ._block-1,
+    ._block-2,
+    ._block-3 {
+        position: absolute;
+        display: block;
+        border-radius: 0.05em;
+    }
+    ._block-1 {
+        background: sugar.color(current);
+        animation: s-carpenter-loader-blocks-1 1s linear infinite;
+    }
+    ._block-2 {
+        background: sugar.color(current);
+        animation: s-carpenter-loader-blocks-2 1s linear infinite;
+    }
+    ._block-3 {
+        background: sugar.color(current);
+        animation: s-carpenter-loader-blocks-3 1s linear infinite;
+    }
+}
+
 .carpenter-loader {
     margin-block-end: sugar.margin(30);
     position: relative;
