--- a/packages/app/s-carpenter/src/css/s-carpenter-component.css
+++ b/packages/app/s-carpenter/src/css/s-carpenter-component.css
@@ -121,7 +121,8 @@ body:has(.s-carpenter_body) {
 
     ._inner {
         background-color: #2c3138;
-        background-image: url('https://cdnv2.coffeekraken.io/carpenter-loading-bkg.png');
+        background-color: sugar.color(complementary);
+        /* background-image: url('https://cdnv2.coffeekraken.io/carpenter-loading-bkg.png'); */
         background-position: 50% 50%;
         background-size: cover;
         color: white;
@@ -132,8 +133,9 @@ body:has(.s-carpenter_body) {
     }
 
     ._loader {
-        font-size: 150px;
+        font-size: 60px;
         @sugar.color (#fff);
+        margin-block-end: sugar.margin(30);
     }
 
     ._title {
