--- a/packages/components/s-specs-editor-component/src/css/s-specs-editor-component.css
+++ b/packages/components/s-specs-editor-component/src/css/s-specs-editor-component.css
@@ -223,13 +223,13 @@
         width: 100%;
         padding-block: sugar.padding(30);
         margin-block-end: sugar.margin(30);
+        border-bottom: 1px solid sugar.color(main, border);
         background-image: linear-gradient(
             45deg,
             sugar.color(main, background),
             sugar.color(main, background, --lighten 5%)
         );
         @sugar.transition;
-        @sugar.depth (50);
 
         &-title {
             color: sugar.color(accent);
