--- a/packages/app/s-carpenter/src/css/generic/carpenter-loader.css
+++ b/packages/app/s-carpenter/src/css/generic/carpenter-loader.css
@@ -10,6 +10,18 @@
     }
 }
 
+@keyframes s-carpenter-loader-color {
+    0% {
+        color: sugar.color(complementary);
+    }
+    50% {
+        color: sugar.color(accent);
+    }
+    100% {
+        color: sugar.color(complementary);
+    }
+}
+
 @keyframes s-carpenter-loader-blocks-1 {
     0% {
         top: 0;
@@ -151,6 +163,7 @@
     display: inline-block;
     width: 1em;
     height: 1em;
+    fill: currentColor;
 
     ._block-1,
     ._block-2,
@@ -158,17 +171,18 @@
         position: absolute;
         display: block;
         border-radius: 0.05em;
+        @sugar.depth (100);
     }
     ._block-1 {
-        background: sugar.color(current);
+        background: currentColor;
         animation: s-carpenter-loader-blocks-1 1s linear infinite;
     }
     ._block-2 {
-        background: sugar.color(current);
+        background: currentColor;
         animation: s-carpenter-loader-blocks-2 1s linear infinite;
     }
     ._block-3 {
-        background: sugar.color(current);
+        background: currentColor;
         animation: s-carpenter-loader-blocks-3 1s linear infinite;
     }
 }
@@ -187,7 +201,7 @@
         transform-origin: 40% 55%;
 
         * {
-            fill: sugar.color(current);
+            fill: currentColor;
         }
     }
 }
