--- a/packages/components/s-specs-editor-component/src/css/s-specs-editor-component.css
+++ b/packages/components/s-specs-editor-component/src/css/s-specs-editor-component.css
@@ -88,57 +88,74 @@
 
     .s-specs-editor_repeatable {
         /* background: red; */
-        background: sugar.color(main, background, --darken 5%);
+        background: sugar.color(main, background);
+        margin-inline: calc(sugar.margin(40) * -1);
     }
     .s-specs-editor_repeatable-title {
+        display: flex;
+        align-items: center;
         background: sugar.color(main, surface);
-        background-image: linear-gradient(
-            -25deg,
-            sugar.color(main, background),
-            sugar.color(main, background, --lighten 5%)
-        );
         padding: sugar.padding(30) var(--s-specs-editor-padding-inline);
+        border-top: 1px solid sugar.color(main, --alpha 0.1);
         cursor: pointer;
-        @sugar.depth (100);
+
+        &,
+        * {
+            @sugar.transition (fast);
+        }
+
+        > span {
+            flex-grow: 1;
+        }
 
         &.active,
         &:hover {
-            background-image: linear-gradient(
-                -45deg,
-                sugar.color(accent),
-                sugar.color(accent, --darken 3%)
-            );
+            background: sugar.color(complementary, --alpha 0.05);
         }
 
         &.active {
-            background-image: linear-gradient(
-                45deg,
-                sugar.color(accent),
-                sugar.color(accent, --darken 3%)
-            );
-        }
+            background: sugar.color(complementary, --alpha 0.5);
+            color: white;
+            font-weight: bold;
 
-        .s-specs-editor_repeatable-remove {
-            float: right;
-            display: none;
-            margin-inline-end: sugar.margin(10);
-        }
-        &:hover .s-specs-editor_repeatable-remove {
-            display: block;
-            i {
-                margin-inline-start: sugar.margin(10);
+            * {
+                color: white;
             }
         }
 
-        i {
-            float: right;
+        &.active,
+        &:has(
+                + .s-specs-editor_repeatable-item
+                    + .s-specs-editor_repeatable-actions:last-child
+            ) {
+            border-bottom: 1px solid sugar.color(main, --alpha 0.1);
+        }
+
+        ._remove {
+            @sugar.ui.button ($lnf: text);
+            @sugar.color (error);
+            @sugar.scale (0.9);
+            /* display: none; */
+            margin-inline-end: sugar.margin(10);
+
+            &:focus {
+                margin-inline-end: sugar.margin(30);
+            }
+        }
+        &:hover ._remove {
+            display: inline-block;
         }
     }
     .s-specs-editor_repeatable-item {
-        display: none;
+        overflow: hidden;
+        max-height: 0;
+        border-left: sugar.margin(10) solid
+            sugar.color(complementary, --alpha 0.5);
+        @sugar.transition;
     }
     .s-specs-editor_repeatable-item.active {
         display: block;
+        max-height: 400px;
     }
 
     .s-specs-editor_repeatable-item-actions {
@@ -152,8 +169,18 @@
     }
 
     .s-specs-editor_repeatable-actions {
-        padding: sugar.padding(30) sugar.padding(30);
+        padding: sugar.padding(30) sugar.padding(40);
         text-align: end;
+
+        ._add {
+            @sugar.ui.button ($lnf: outline);
+            @sugar.color (accent);
+
+            i {
+                color: currentColor;
+                margin: 0;
+            }
+        }
     }
 
     .s-specs-editor_media-icons {
