--- a/packages/@examples/01-basic/src/views/sections/heading/heading.twig
+++ b/packages/@examples/01-basic/src/views/sections/heading/heading.twig
@@ -40,11 +40,13 @@
                     
             </div>
             <div>
-                <div s-appear in="right" delay="600">
-                    <div class="s-media-container">
-                        <img class="_img s-media" src="{{ image.url }}" title="{{ image.title }}" alt="{{ image.alt }}" />
+                {% if image.url %}
+                    <div s-appear in="right" delay="600">
+                        <div class="s-media-container">
+                            <img class="_img s-media" src="{{ image.url }}" title="{{ image.title }}" alt="{{ image.alt }}" />
+                        </div>
                     </div>
-                </div>
+                {% endif %}
             </div>
         </div>
     </div>
