--- a/packages/components/s-specs-editor-component/src/css/widgets/wysiwyg-widget.css
+++ b/packages/components/s-specs-editor-component/src/css/widgets/wysiwyg-widget.css
@@ -9,30 +9,67 @@
         @sugar.border.radius();
     }
 
+    textarea {
+        width: 100%;
+    }
+
     .ce-inline-toolbar__toggler-and-button-wrapper {
         padding: 0;
+    }
+
+    .codex-editor__redactor {
+        margin: 0;
+    }
+
+    .ce-toolbar__actions {
+        background: sugar.color(main, background);
+        color: sugar.color(main, text);
+        padding: sugar.padding(10);
+        right: auto;
+        left: 0;
+        @sugar.depth (100);
+        @sugar.border.radius();
+    }
+
+    .ce-toolbox,
+    .ce-popover {
+        left: 0;
+        right: auto;
+    }
+
+    .codex-editor__redactor {
+        padding-bottom: sugar.padding(60) !important;
     }
 
     .ce-inline-toolbar__buttons {
         max-width: 100%;
         flex-wrap: wrap;
+        gap: sugar.margin(10);
+        justify-content: space-between;
 
         button {
             padding: sugar.padding(10) sugar.padding(20);
-            background: sugar.color(accent, --alpha 0);
+            border: 1px solid sugar.color(main, --alpha 0.05);
             @sugar.transition (fast);
             @sugar.border.radius;
 
+            &:not(._color) {
+                background: sugar.color(accent, --alpha 0);
+            }
+
             &._color {
-                width: 1em;
-                height: 1em;
             }
 
             svg {
                 height: 1em;
             }
 
-            &:hover {
+            &._color:hover {
+                background: var(--s-wysiwyg-color);
+                color: white;
+            }
+
+            &:not(._color):hover {
                 background: sugar.color(accent);
                 color: sugar.color(accent, foreground);
 
