--- a/packages/components/s-specs-editor-component/src/css/components/_imports.css
+++ b/packages/components/s-specs-editor-component/src/css/components/_imports.css
@@ -1,5 +1,6 @@
 @import './actions.css';
 @import './child.css';
+@import './copy-button.css';
 @import './error.css';
 @import './label.css';
 @import './media.css';
