--- a/packages/@examples/01-basic/src/views/sections/sandbox/sandbox.twig
+++ b/packages/@examples/01-basic/src/views/sections/sandbox/sandbox.twig
@@ -1,5 +1,5 @@
 <section class="section-heading {{ __spacesClasses(spaces, frontspec) }}" s-specs="views.sections.sandbox">
-    {{ __specsValuesTemplate(_context)|raw }}
+    {{ __specsDataTemplate(_context)|raw }}
 
     <div class="_bkg">
         {# <video autoplay loop>
