--- a/packages/@examples/01-basic/src/views/sections/slider/slider.twig
+++ b/packages/@examples/01-basic/src/views/sections/slider/slider.twig
@@ -1,5 +1,5 @@
 <section class="section-slider {{ __spacesClasses(spaces, frontspec) }}" s-specs="views.sections.slider">
-    {{ __specsValuesTemplate(_context)|raw }}
+    {{ __specsDataTemplate(_context)|raw }}
     
     <div class="s-container">
         <s-slider controls loop>
