--- a/packages/@examples/01-basic/src/views/sections/story/story.twig
+++ b/packages/@examples/01-basic/src/views/sections/story/story.twig
@@ -1,5 +1,5 @@
 <section class="section-story {{ __spacesClasses(spaces, frontspec) }}" layout="{{ layout }}" s-appear in="bottom" delay="500" s-specs="views.sections.story">
-    {{ __specsValuesTemplate(_context)|raw }}
+    {{ __specsDataTemplate(_context)|raw }}
     
     <div class="s-container">
         <div class="s-layout:{{ layout }} @mobile s-layout:1_2">
