--- a/packages/@examples/01-basic/src/views/sections/tabs/tabs.twig
+++ b/packages/@examples/01-basic/src/views/sections/tabs/tabs.twig
@@ -1,5 +1,5 @@
 <section class="section-tabs {{ __spacesClasses(spaces, frontspec) }}" s-specs="views.sections.tabs">
-    {{ __specsValuesTemplate(_context)|raw }}
+    {{ __specsDataTemplate(_context)|raw }}
     
     <div class="s-container">
         <div class="_layout">
