--- a/packages/@examples/02-systemsChart/src/views/sections/chart/chart.twig
+++ b/packages/@examples/02-systemsChart/src/views/sections/chart/chart.twig
@@ -1,5 +1,5 @@
 <section class="section-chart {{ __spacesClasses(spaces, frontspec) }}" s-specs="views.sections.chart">
-    {{ __specsValuesTemplate(_context)|raw }}
+    {{ __specsDataTemplate(_context)|raw }}
     <div class="_bkg">
         <img src="{{ bkg.url }}" />
     </div>
