--- a/packages/app/s-carpenter/src/css/components/editor.css
+++ b/packages/app/s-carpenter/src/css/components/editor.css
@@ -62,7 +62,8 @@
     }
 }
 
-.s-carpenter-app_editor.scrolled .s-specs-editor_metas {
+.s-carpenter-app_editor.scrolled .s-specs-editor_metas-heading,
+.s-carpenter-app_editor.scrolled .s-specs-editor_metas-source {
     padding-block: sugar.padding(20);
     padding-inline: sugar.padding(30);
 
