--- a/packages/components/s-specs-editor-component/src/css/components/prop.css
+++ b/packages/components/s-specs-editor-component/src/css/components/prop.css
@@ -6,6 +6,6 @@
     }
 
     &:has(> div) {
-        padding-block: sugar.padding(30);
+        padding-block: var(--s-specs-editor-padding-block);
     }
 }
