--- a/packages/components/s-specs-editor-component/src/css/components/metas.css
+++ b/packages/components/s-specs-editor-component/src/css/components/metas.css
@@ -1,53 +1,62 @@
 .s-specs-editor_metas {
-    display: flex;
-    align-items: center;
-    padding-inline: var(--s-specs-editor-padding-inline);
     position: sticky;
     z-index: 10;
     top: 0;
     left: 0;
     width: 100%;
-    padding-block: sugar.padding(30);
     margin-block-end: sugar.margin(30);
     border-bottom: 1px solid sugar.color(main, border);
-    background-image: linear-gradient(
-        45deg,
-        sugar.color(main, background),
-        sugar.color(main, background, --lighten 5%)
-    );
-    @sugar.transition;
+    background: sugar.color(main, background);
 
-    &-title {
-        color: sugar.color(accent);
-    }
-
-    * {
-        @sugar.transition;
-        overflow: hidden;
-        opacity: 1;
-    }
-
-    ._title {
-        flex-grow: 1;
-    }
-
-    ._actions {
+    &-heading {
         display: flex;
-        gap: sugar.margin(10);
+        align-items: center;
+        padding-inline: var(--s-specs-editor-padding-inline);
+        padding-block: sugar.padding(30);
+        @sugar.transition;
 
-        ._action {
+        * {
+            @sugar.transition;
+            overflow: hidden;
+            opacity: 1;
         }
-        ._action-save {
-            @sugar.ui.button();
-            @sugar.color (complementary);
+        ._title {
+            flex-grow: 1;
+        }
 
-            &.error {
-                @sugar.color (error);
+        ._actions {
+            display: flex;
+            gap: sugar.margin(10);
+
+            ._action {
+            }
+            ._action-save {
+                @sugar.ui.button();
+                @sugar.color (complementary);
+
+                &.error {
+                    @sugar.color (error);
+                }
+            }
+            ._action-delete {
+                @sugar.ui.button ($lnf: text);
+                /* @sugar.color (error); */
             }
         }
-        ._action-delete {
-            @sugar.ui.button ($lnf: text);
-            /* @sugar.color (error); */
+    }
+
+    &-source {
+        padding-inline: var(--s-specs-editor-padding-inline);
+        padding-block: sugar.padding(20);
+        background: sugar.color(complementary);
+        @sugar.transition;
+
+        ._text {
+            color: sugar.color(complementary, foreground);
+        }
+        ._link {
+            font-weight: bold;
+            color: sugar.color(accent);
         }
     }
 }
