--- a/packages/components/s-specs-editor-component/src/css/s-specs-editor-component.css
+++ b/packages/components/s-specs-editor-component/src/css/s-specs-editor-component.css
@@ -3,5 +3,6 @@
 
 .s-specs-editor {
     --s-specs-editor-padding-inline: sugar.padding(40);
+    --s-specs-editor-padding-block: sugar.padding(30);
     user-select: none;
 }
