--- a/packages/tools/sugar/src/views/twig/sugar/components/slider/slider.twig
+++ b/packages/tools/sugar/src/views/twig/sugar/components/slider/slider.twig
@@ -1,7 +1,7 @@
 <div class="{{ attributes.class }} {{ container ? 's-container:' ~ container : '' }} {{ __marginClasses(margin, frontspec) }} {{ __paddingClasses(padding, frontspec) }}"
     {{ __attrs(attributes, ['class'])|raw }} s-specs="views.components.slider">
     
-    {{ __specsValuesTemplate(_context)|raw }}
+    {{ __specsDataTemplate(_context)|raw }}
 
 <s-slider 
     class="{{ ratio ? 's-ratio--' ~ ratio|__replace('/','-') : '' }}"
